objects/Integration_Event_Log__c.object
<CustomObject>
    <fields>
        <fullName>Average_Elapsed_Time__c</fullName>
        <label>Elapsed Time - Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Resolution_Time_Functional_Error__c</fullName>
        <label>Resolution Time for Func. Errors-Avg</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Resolution_Time_Technical_Errors__c</fullName>
        <label>Resolution Time for Technical Errors-Avg</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Indicator__c</fullName>
        <formula>IF((LOWER(Status__c) = &quot;success&quot; ),IMAGE(&quot;/resource/1571911804000/GraphicsPackNew/silk/16/silk/tick.png&quot;, &quot;Success &quot;),IF((LOWER(Status__c) = &quot;failure&quot;),IMAGE(&quot;/resource/1571911804000/GraphicsPackNew/fatcow/farmfresh/16/delete.png&quot;, &quot;Error&quot;),Null))</formula>
        <label>Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_URL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+File_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Version__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Case</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Integration Event Log</relationshipLabel>
        <relationshipName>Integration_Event_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Master ID</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Process Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Integration Event Log</relationshipLabel>
        <relationshipName>Integration_Event_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Tracking_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sub Tracking ID</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>System Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Errors__c</fullName>
        <label>Number of Errors</label>
        <summaryForeignKey>Integration_Error_Log__c.Integration_Event_Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Resolution_Time__c</fullName>
        <label>Resolution Time</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Resolved_Functional_Errors__c</fullName>
        <label>Resolved Functional Errors</label>
        <summaryFilterItems>
            <field>Integration_Error_Log__c.Category__c</field>
            <operation>contains</operation>
            <value>Functional</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Integration_Error_Log__c.Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>Integration_Error_Log__c.Integration_Event_Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Resolved_Technical_Errors__c</fullName>
        <label>Resolved Technical Errors</label>
        <summaryFilterItems>
            <field>Integration_Error_Log__c.Category__c</field>
            <operation>contains</operation>
            <value>Technical</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Integration_Error_Log__c.Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>Integration_Error_Log__c.Integration_Event_Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Unresolved__c</fullName>
        <label>Total Unresolved</label>
        <summaryFilterItems>
            <field>Integration_Error_Log__c.Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </summaryFilterItems>
        <summaryForeignKey>Integration_Error_Log__c.Integration_Event_Log__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tracking_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tracking ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Transaction Date Time</label>
        <type>DateTime</type>
    </fields>
    <label>Integration Event Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event_Indicator__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Implementation_Case__c</columns>
        <columns>Status__c</columns>
        <columns>System_Name__c</columns>
        <columns>Transaction_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Event-{0000000}</displayFormat>
        <label>Event ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Event Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>